# smol

./: .dockerignore  .gitignore  Dockerfile  README.md  cdk.json  pyproject.toml
.github/workflows/: build-and-push.yaml  deploy-aws.yaml  deploy.yaml  static-test.yaml
scripts/: run_tests.sh
smol/: alb_types.py  api.py  captcha.py  exceptions.py  link.py  models.py  resolve.py  safe_site.py  shorten.py
smol_cdk/: app.py  stack.py  table.py  target.py
tests/: test_api.py  test_base.py  test_captcha.py  test_resolve.py  test_safe_site.py  test_shorten.py
