[tool.poetry]
name = "smol"
version = "1.0.0"
description = "Core services for smol.io url shortener"
authors = ["Demetrius Shargani <https://github.com/developerDemetri>"]

[tool.poetry.dependencies]
python = "~3.11.8"
awslambdaric = "~2.0.11"
ecs-logging = "~2.1.0"
pydantic = "~2.7.3"
pynamodb = "~6.0.1"
requests = "~2.32.3"
validators = "~0.28.3"

[tool.poetry.dev-dependencies]
ruff = "^0.4.8"
flexmock = "^0.12.1"
mypy = "^1.10.0"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
types-requests = "^2.32.0.20240602"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
python_version = "3.11"


[tool.pytest.ini_options]
minversion = "8.2.2"
addopts = "--cov=smol --cov-branch --cov-fail-under=95 --cov-report html --cov-report xml"
testpaths = [
    "tests",
]


[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"


[tool.ruff.format]
quote-style = "double"
indent-style = "space"